# sdcc

./: .gbp.conf  ChangeLog  cleanup-script.sh  configure  configure.in  sdcc_2.3.0.orig.tar.gz.delta  sdcc_2.3.0.orig.tar.gz.id  sdcc_2.4.0.orig.tar.gz.delta  sdcc_2.4.0.orig.tar.gz.id  sdcc_2.5.0.orig.tar.gz.delta  sdcc_2.5.0.orig.tar.gz.id  sdcc_2.5.99+2.6.0rc1.orig.tar.gz.delta  sdcc_2.5.99+2.6.0rc1.orig.tar.gz.id  sdcc_2.6.0.orig.tar.gz.delta  sdcc_2.6.0.orig.tar.gz.id  sdcc_2.7.0.orig.tar.gz.delta  sdcc_2.7.0.orig.tar.gz.id  sdcc_2.8.0.dfsg.orig.tar.gz.delta  sdcc_2.8.0.dfsg.orig.tar.gz.id  sdcc_2.9.0.orig.tar.gz.delta  sdcc_2.9.0.orig.tar.gz.id  sdcc_3.1.0+dfsg.orig.tar.gz.delta  sdcc_3.1.0+dfsg.orig.tar.gz.id  sdcc_3.3.0+dfsg.orig.tar.gz.delta  sdcc_3.3.0+dfsg.orig.tar.gz.id  sdcc_3.4.0+dfsg.orig.tar.gz.delta  sdcc_3.4.0+dfsg.orig.tar.gz.id  sdcc_3.5.0+dfsg.orig.tar.gz.delta  sdcc_3.5.0+dfsg.orig.tar.gz.id  sdcc_3.7.0+dfsg.orig.tar.xz.delta  sdcc_3.7.0+dfsg.orig.tar.xz.id  sdcc_3.7.0+dfsg2.orig.tar.xz.delta  sdcc_3.7.0+dfsg2.orig.tar.xz.id  sdcc_3.8.0+dfsg.orig.tar.gz.delta  sdcc_3.8.0+dfsg.orig.tar.gz.id  sdcc_4.0.0+dfsg.orig.tar.xz.delta  sdcc_4.0.0+dfsg.orig.tar.xz.id  sdcc_4.2.0+dfsg.orig.tar.xz.delta  sdcc_4.2.0+dfsg.orig.tar.xz.id  sdcc_4.4.0+dfsg.orig.tar.xz.delta  (+3 more)
.github/workflows/: build-debian.yml  build-ubuntu.yml
CVS/: Entries
as/CVS/: Entries
as/doc/CVS/: Entries
as/mcs51/CVS/: Entries
as/z80/CVS/: Entries
debian/: NEWS  README.Debian  README.source  aslink.1  asxxxx.1  authors  autoreconf.after  autoreconf.before  changelog  control  copyright  gbp.conf  not-installed  packihx.1  rules  sdcc-doc.dirs  sdcc-doc.doc-base  sdcc-doc.install  sdcc-libraries.install  sdcc-libraries.lintian-overrides  sdcc-libraries.overrides  sdcc-ucsim.doc-base  sdcc-ucsim.docs  sdcc-ucsim.files  sdcc-ucsim.install  sdcc-ucsim.manpages  sdcc.1  sdcc.dirs  sdcc.doc-base  sdcc.docs  sdcc.files  sdcc.install  sdcc.manpages  sdcdb.1  sdcpp.1  sdcppold.1  serialview.1  source.lintian-overrides  ucsim.1  update.sh  (+1 more)
debian/manpages/: aslink.1  asxxxx.1  sdcc.1  sdcdb.1  sdld.1  ucsim.1
debian/patches/: 0001-Back-port-error-messages-from-asrab-5.40.patch  0001-Differentiate-between-AF-and-AF.patch  0002-Add-support-for-alternate-registers.patch  0002-Replace-crt0.s-for-the-Rabbit-targets.patch  0003-Back-port-implementation-of-LDP-from-asrab-5.4.patch  0004-Fix-compilation-Werror-format-security.patch  0005-sdas-Increase-address-length-to-24-bits.patch  0006-rab-Fix-ISR-return-instruction.patch  01_disable_non-free  01_enable_huge_model.patch  01_fix_getline  01_fix_spelling.patch  02_enable_ppc64.patch  02_fix_elf_defn.patch  02_fix_lyx.patch  02_fix_spelling  02_result_type_gptr  03_fix_cmdlex  03_no_bool_typedef.patch  03_spelling.patch  04_fix_ftbfs_with_lyx_2.3.patch  04_libtool_fix  series  series.org
debugger/CVS/: Entries
debugger/mcs51/CVS/: Entries
device/CVS/: Entries
device/examples/CVS/: Entries
device/include/: Makefile.in
device/include/CVS/: Entries
device/include/mcs51/: at89c51snd1c.h
device/include/pic/: pic16f877.h
device/include/pic16/: adc.h  ctype.h  delay.h  errno.h  gstack.h  i2c.h  malloc.h  math.h  pic18f1220.h  pic18f2220.h  pic18f242.h  pic18f2455.h  pic18f248.h  pic18f252.h  pic18f258.h  pic18f2620.h  pic18f442.h  pic18f4455.h  pic18f448.h  pic18f452.h  pic18f4550.h  pic18f458.h  pic18f4620.h  pic18f6520.h  pic18f6620.h  pic18f6680.h  pic18f6720.h  pic18f8520.h  pic18f8620.h  pic18f8680.h  pic18f8720.h  pic18fregs.h  sdcc-lib.h  signal.h  stdarg.h  stdbool.h  stddef.h  stdio.h  stdlib.h  string.h  (+1 more)
device/lib/: Makefile.in  clean.mk  vprintf.c
device/lib/CVS/: Entries
device/lib/pic/: Makefile.common.in  Makefile.in  Makefile.rules  Makefile.subdir
device/lib/pic14/: Makefile.in  configure.in
device/lib/pic16/: Makefile  Makefile.common  Makefile.common.in  Makefile.in  Makefile.rules  Makefile.subdir  config.status  configure  configure.in
device/lib/r2k/: crt0.s
device/lib/r2ka/: crt0.s
device/lib/r3ka/: crt0.s
doc/: INSTALL.txt  KNOWNBUGS.txt  Makefile  Makefile.in  README.txt  cdbfileformat.lyx  clean.mk  sdccman.lyx  test_suite_spec.lyx
doc/CVS/: Entries
doc/avr/CVS/: Entries
doc/sdccman.html/CVS/: Entries  Repository
doc/test_suite_spec.html/CVS/: Entries  Repository
doc/z80/CVS/: Entries
link/CVS/: Entries
link/z80/CVS/: Entries
packihx/CVS/: Entries  Repository
sim/CVS/: Entries
sim/ucsim/CVS/: Entries
sim/ucsim/avr.src/: Makefile.in  arith_inst.cc
sim/ucsim/cmd.src/: Makefile.in
sim/ucsim/gui.src/: Makefile.in
sim/ucsim/s51.src/: Makefile.in
sim/ucsim/sim.src/: Makefile.in
sim/ucsim/z80.src/: Makefile.in
src/: SDCCast.c  clean.mk
src/CVS/: Entries
src/avr/CVS/: Entries
src/ds390/CVS/: Entries  Repository
src/izt/CVS/: Entries  Repository
src/mcs51/CVS/: Entries
src/pic/: pcode.c
src/pic/CVS/: Entries  Repository
src/pic16/: NOTES  devices.inc  genutils.h  graph.c  graph.h
src/regression/CVS/: Entries  Repository
src/z80/: main.c
src/z80/CVS/: Entries
support/CVS/: Entries
support/Util/CVS/: Entries  Repository
support/cpp/CVS/: Entries
support/cpp2/CVS/: Entries  Repository
support/scripts/: cinc2h.pl  inc2h.pl  optimize_pic16devices.pl
support/sdbinutils/bfd/doc/: Makefile.am  Makefile.in
support/sdranlib/: sdranlib.c
tinitalk/CVS/: Entries  Repository
(+274 files in other folders)
